# riboviz

./: .Rhistory  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  SGE.config  app.R  features.Rmd  newRibo  prep_riboviz.nf  riboviz.nf  setup.cfg  setup.py  testfile
.devcontainer/: devcontainer.json
.install/: R_environment.yml  python_environment.yml
BackendProcessData/: process.R  processFigure3.R  processFigure5.R
D3Scripts/: 3nt.js  CodonSpecificDistribution.js  CorrelationsAbundancesReads.js  CorrelationsReadsFeatures.js  ExcessCodonSpecificRPF.js  NucleotideBiasAlongRP.js  ReadCountHistogram.js
Data/: 2010  2014  2015  AllData.tsv  F1_2009_Ingolia_mRNA-starved-1.tsv  F1_2009_Ingolia_rpf-rich-2.tsv  F1_2012_Brar_mRNA_11_tp_ndt80_release_tc.tsv  F1_2012_Brar_mRNA_12_tp_ndt80_release_tc.tsv  F1_2012_Brar_mRNA_13_tp_ndt80_release_tc.tsv  F1_2012_Brar_mRNA_15_tp_ndt80_release_tc.tsv  F1_2012_Brar_mRNA_3_tp_ndt80_release_tc.tsv  F1_2012_Brar_mRNA_4_tp_ndt80_release_tc.tsv  F1_2012_Brar_mRNA_8_tp_ndt80_release_tc.tsv  F1_2012_Brar_mRNA_A_tp_traditional_tc_premeiotic.tsv  F1_2012_Brar_mRNA_E_tp_traditional_tc.tsv  F1_2012_Brar_mRNA_F_tp_traditional_tc.tsv  F1_2012_Brar_mRNA_G_tp_traditional_tc.tsv  F1_2012_Brar_mRNA_K_tp_traditional_tc.tsv  F1_2012_Brar_mRNA_for_14201_meiotic_rep_2.tsv  F1_2012_Brar_mRNA_for_A14201_meiotic_rep_1.tsv  F1_2012_Brar_mRNA_for_exp_veg_cells_str_14201_used_ndt80_release_tc.tsv  F1_2012_Brar_mRNA_for_exp_veg_cells_str_gb15_used_traditional_tc.tsv  F1_2012_Brar_mRNA_for_gb15_meiotic_rep_1.tsv  F1_2012_Brar_mRNA_for_mata-a_strain_fig_s6a.tsv  F1_2012_Brar_mRNA_i_tp_traditional_tc_the_first_lane_of_this.tsv  F1_2012_Brar_mRNA_i_tp_traditional_tc_the_second_lane_of_this.tsv  F1_2012_Brar_rpf_13_tp_ndt80_release_tc.tsv  F1_2012_Brar_rpf_18_tp_ndt80_release_tc.tsv  F1_2012_Brar_rpf_1_tp_ndt80_release_tc_premeiotic.tsv  F1_2012_Brar_rpf_5_tp_ndt80_release_tc.tsv  F1_2012_Brar_rpf_9_tp_ndt80_release_tc.tsv  F1_2012_Brar_rpf_A_tp_traditional_tc_premeiotic.tsv  F1_2012_Brar_rpf_B_tp_traditional_tc.tsv  F1_2012_Brar_rpf_D_tp_traditional_tc.tsv  F1_2012_Brar_rpf_E_tp_traditional_tc_first_lane_of_this.tsv  F1_2012_Brar_rpf_G_tp_traditional_tc_the_first_lane_of_this.tsv  F1_2012_Brar_rpf_K_tp_traditional_tc.tsv  F1_2012_Brar_rpf_for_A14201_meiotic_rep_1.tsv  F1_2012_Brar_rpf_for_exp_veg_cells_str_14201_used_ndt80_release_tc.tsv  F1_2012_Brar_rpf_for_exp_veg_cells_str_gb15_used_traditional_tc.tsv  (+3449 more)
Frontend/: DataPage.html  GeneBased.html  HelpPage.html  MethodsPage.html  index.html  untitled text 8.html
Rscripts/: F3_RPF_CHX_BG.tsv  F4_RPF_BG.tsv  F7_BG.tsv  bam_to_hdf5.R
Shiny/: 2009  2012  Supp  server.R  ui.R
bash/: create-set-riboviz-env.sh  environment-tables.sh  environment.sh  install-centos.sh  install-hisat-bowtie.sh  install-py.sh  install-r-3.4-bioconductor.R  install-r-centos.sh  install-r.R  install-tools.sh  install-ubuntu.sh
code-docs/: conf.py  modules.rst
data/: codon-pairs.tsv  codons.tsv  data_unq.tsv  feature_pos.tsv  simdata_UMI3_4nt.fastq  simdata_UMI3_4nt_adaptor.fastq  simdata_UMI5and3_4nt.fastq  simdata_UMI5and3_4nt_adaptor.fastq  simdata_extracted_UMI3_4nt.fastq  yeast_CDS_w_250utrs.gff3  (+3 more)
(+1433 files in other folders)
