[metadata]
name = riboviz-py
version = 2.1
author = TODO
author_email = TODO
description = RiboViz, a bioinformatics toolkit for analysis ribosome profiling datasets.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/riboviz/riboviz
project_urls =
    Bug Tracker = https://github.com/riboviz/rioboviz/issues
classifiers =
    # From https://pypi.org/classifiers/
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: Unix
    Development Status :: 5 - Production/Stable
    Topic :: Scientific/Engineering :: Bio-Informatics
[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .
include =
  riboviz*
exclude =
  riboviz.test

[options.entry_points]
console_scripts =
  check_fasta_gff = riboviz.tools.check_fasta_gff:invoke_check_fasta_gff
  count_reads = riboviz.tools.count_reads:invoke_count_reads
  create_barcode_pairs = riboviz.tools.create_barcode_pairs:invoke_create_barcode_pairs
  create_fastq_simdata = riboviz.tools.create_fastq_simdata:invoke_create_fastq_simdata
  create_job_script = riboviz.tools.create_job_script:invoke_create_job_script
  demultiplex_fastq = riboviz.tools.demultiplex_fastq:invoke_demultiplex_fastq
  get_cds_codons = riboviz.tools.get_cds_codons:invoke_get_cds_codons
  subsample_bioseqfile = riboviz.tools.subsample_bioseqfile:invoke_subsample_bioseqfile
  trim_5p_mismatch = riboviz.tools.trim_5p_mismatch:invoke_trim_5p_mismatch
  upgrade_config_file = riboviz.tools.upgrade_config_file:invoke_upgrade_config_file
