[metadata]
name = riboviz-py
version = attr: riboviz.__version__
author = RiboViz project team
author_email = Edward.Wallace@ed.ac.uk
description = RiboViz, a bioinformatics toolkit for analysis ribosome profiling datasets.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/riboviz/riboviz
project_urls =
    Bug Tracker = https://github.com/riboviz/rioboviz/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: Unix
    Development Status :: 5 - Production/Stable
    Topic :: Scientific/Engineering :: Bio-Informatics
[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .
include =
  riboviz*
exclude =
  riboviz*test*

[options.entry_points]
console_scripts =
  check_fasta_gff = riboviz.tools.check_fasta_gff:main
  count_reads = riboviz.tools.count_reads:main
  create_barcode_pairs = riboviz.tools.create_barcode_pairs:main
  create_fastq_simdata = riboviz.tools.create_fastq_simdata:main
  create_job_script = riboviz.tools.create_job_script:main
  demultiplex_fastq = riboviz.tools.demultiplex_fastq:main
  get_cds_codons = riboviz.tools.get_cds_codons:main
  subsample_bioseqfile = riboviz.tools.subsample_bioseqfile:main
  trim_5p_mismatch = riboviz.tools.trim_5p_mismatch:main
  upgrade_config_file = riboviz.tools.upgrade_config_file:main
